--- a/mandelbulber2/formula/ui/transf_difs_piriform.ui
+++ b/mandelbulber2/formula/ui/transf_difs_piriform.ui
@@ -827,17 +827,31 @@
     </widget>
    </item>
    <item>
+    <layout class="QGridLayout" name="gridLayout_47" columnstretch="0,1">
+     <property name="spacing">
+      <number>2</number>
+     </property>
+     <item row="0" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
+       <property name="text">
+        <string>enable modes</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledI_false">
+       <property name="text">
+        <string notr="true">square</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_44" columnstretch="0,1">
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="2" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
-       <property name="text">
-        <string notr="true">disable clip</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_0">
        <property name="sizePolicy">
@@ -870,6 +884,13 @@
       <widget class="QLabel" name="label_122">
        <property name="text">
         <string>clip offset:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
+       <property name="text">
+        <string notr="true">disable clip</string>
        </property>
       </widget>
      </item>
@@ -911,7 +932,7 @@
         <double>99.989999999999995</double>
        </property>
        <property name="singleStep">
-        <double>0.100000000000000</double>
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
@@ -1170,7 +1191,7 @@
      <property name="title">
       <string>aux.color</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -1309,6 +1330,13 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledA_false">
+        <property name="text">
+         <string notr="true">iter</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
